@@ -53,6 +53,7 @@ Application Changes:
 - Fixed an issue with items with ratings not correctly setting their rating when added as a child of another object. Closes #5054
 - Fixed vehicle mods incorrectly being filtered by weapon mod capacity during career mode.
 - Stolen vehicles now properly remain stolen after saving and reloading a character.
+- When skills associated with a certain skill group unlock for a character, the skill group now always immediately shows up in the list of skill groups instead of sometimes requiring one of those associated skills to be changed before showing up. Fixes #5035.
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
